# node-addons-template

./: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  binding.gyp  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
addons/: addons.cpp  library.cpp  main.cpp
addons/__test__/: example.cpp  example.h  testExample.cpp
addons/test/: bash.test.cpp
include/: hello.h
install/: loadSources.js
lib/: hello.lib
src/: addons.types.ts  index.ts
src/addons-test/: helloWorld.test.ts
src/test/: base.test.ts
src/types/: NodeAddonsTemplate.ts
src/utils/: index.ts
